--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+:root {
+  --primary-Strong-cyan: hsl(172, 67%, 45%);
+  --neutral-Very-dark-cyan: hsl(183, 100%, 15%);
+  --neutral-Dark-grayish-cyan: hsl(186, 14%, 43%);
+  --neutral-Grayish-cyan: hsl(184, 14%, 56%);
+  --neutral-Light-grayish-cyan: hsl(185, 41%, 84%);
+  --neutral-Very-light-grayish-cyan: hsl(189, 41%, 97%);
+  --neutral-White: hsl(0, 0%, 100%);
+
+  --space-md: 2rem;
+  --space-r: 1.5rem;
+  --space-sm: 1rem;
+  --space-xs: 0.5rem;
+
+  --text-xs: 0.875rem;
+  --text-sm: 1rem;
+  --text-md: 1.5rem;
+  --text-lg: 2rem;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -16,16 +36,14 @@ html {
   text-size-adjust: none;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
-}
-
 /* Set core body defaults */
 body {
   min-height: 100vh;
   line-height: 1.5;
+  font-size: 1.5rem;
+  font-family: 'Space Mono', monospace;
+  font-weight: 700;
+  background-color: var(--neutral-Light-grayish-cyan);
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -47,12 +65,6 @@ h4 {
   text-wrap: balance;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentColor;
-}
-
 /* Make images easier to work with */
 img,
 picture {
@@ -65,6 +77,23 @@ input,
 button {
   font-family: inherit;
   font-size: inherit;
+  border: none;
+  font-weight: 800;
+}
+
+input {
+  background-color: var(--neutral-Very-light-grayish-cyan);
+  color: var(--neutral-Very-dark-cyan);
+  width: 100%;
+
+  &::placeholder {
+    color: var(--neutral-Grayish-cyan);
+  }
+}
+
+h2 {
+  font-size: var(--text-sm);
+  color: var(--neutral-Dark-grayish-cyan);
 }
 
 /* utility classes */
@@ -76,4 +105,174 @@ button {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+.padding-medium {
+  padding: var(--space-md);
+}
+
+.padding-regular {
+  padding: var(--space-r);
+}
+
+.padding-small {
+  padding: var(--text-sm);
+}
+
+.padding-xs {
+  padding: var(--space-xs);
+}
+
+.text-xs {
+  font-size: var(--text-xs);
+}
+
+.text-sm {
+  font-size: var(--text-sm);
+}
+
+.text-md {
+  font-size: var(--text-md);
+}
+
+.text-lg {
+  font-size: var(--text-lg);
+}
+
+.text-capitalize {
+  text-transform: capitalize;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.round-sm {
+  border-radius: 5px;
+}
+
+.round-md {
+  border-radius: 0.5rem;
+}
+
+.round-lg {
+  border-radius: 0.875rem;
+}
+
+.grid-2cols {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.gap-sm {
+  gap: var(--space-sm);
+}
+
+.gap-r {
+  gap: var(--space-r);
+}
+
+.gap-md {
+  gap: var(--space-md);
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.block {
+  display: block;
+}
+
+/* compositions */
+.flow > * + * {
+  margin-top: var(--space-md);
+}
+
+.flow-sm > * + * {
+  margin-top: var(--space-sm);
+}
+
+.flow-xs > * + * {
+  margin-top: var(--space-xs);
+}
+
+.content-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
+
+/* blocks */
+header {
+  display: grid;
+  place-items: center;
+}
+
+.logo {
+  max-width: 5rem;
+}
+
+.calculator {
+  background-color: var(--neutral-White);
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  @media (min-width: 30rem) {
+    flex-direction: row;
+  }
+}
+
+.calculator__outputs {
+  background-color: var(--neutral-Very-dark-cyan);
+  margin-inline: -0.5rem;
+}
+
+.calculator__reset {
+  background-color: var(--primary-Strong-cyan);
+  color: var(--neutral-Very-dark-cyan);
+}
+
+.tip__percentage-btn {
+  background-color: var(--neutral-Very-dark-cyan);
+  color: var(--neutral-White);
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--primary-Strong-cyan);
+    color: var(--neutral-Very-dark-cyan);
+  }
+}
+
+inpur.tip__percentage-btn {
+  cursor: text;
+}
+
+.calculator__output-text {
+  color: var(--neutral-White);
+  & > span + span {
+    color: var(--neutral-Grayish-cyan);
+    margin-top: 3px;
+  }
+}
+
+.calculator__output-number {
+  color: var(--primary-Strong-cyan);
 }
