--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@
   --neutral-Very-light-grayish-cyan: hsl(189, 41%, 97%);
   --neutral-White: hsl(0, 0%, 100%);
 
-  --space-md: 2rem;
-  --space-r: 1.5rem;
-  --space-sm: 1rem;
   --space-xs: 0.5rem;
+  --space-sm: 1rem;
+  --space-rg: 1.5rem;
+  --space-md: 2rem;
 
   --text-xs: 0.875rem;
   --text-sm: 1rem;
-  --text-md: 1.5rem;
-  --text-lg: 2rem;
+  --text-rg: 1.5rem;
+  --text-md: 2rem;
 }
 
 /* Box sizing rules */
@@ -40,10 +40,14 @@ html {
 body {
   min-height: 100vh;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   font-family: 'Space Mono', monospace;
   font-weight: 700;
   background-color: var(--neutral-Light-grayish-cyan);
+
+  @media (min-width: 50rem) {
+    font-size: 1.5rem;
+  }
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -78,7 +82,7 @@ button {
   font-family: inherit;
   font-size: inherit;
   border: none;
-  font-weight: 800;
+  font-weight: 700;
 }
 
 input {
@@ -112,7 +116,7 @@ h2 {
 }
 
 .padding-regular {
-  padding: var(--space-r);
+  padding: var(--space-rg);
 }
 
 .padding-small {
@@ -177,7 +181,7 @@ h2 {
 }
 
 .gap-r {
-  gap: var(--space-r);
+  gap: var(--space-rg);
 }
 
 .gap-md {
@@ -231,23 +235,70 @@ header {
   background-color: var(--neutral-White);
   border-top-left-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
-  display: flex;
-  flex-direction: column;
+  max-inline-size: 22rem;
+  margin-inline: auto;
+
+  display: grid;
+  grid-template-columns: auto;
   gap: 2rem;
 
-  @media (min-width: 30rem) {
-    flex-direction: row;
+  @media (min-width: 50rem) {
+    max-inline-size: 55rem;
+    grid-template-columns: 1fr 1fr;
   }
+}
+
+.bill-input-wrapper,
+.people-input-wrapper {
+  position: relative;
+}
+
+.bill-input-wrapper::before,
+.people-input-wrapper::before {
+  width: 2rem;
+  position: absolute;
+  left: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.bill-input-wrapper::before {
+  content: url(./images/icon-dollar.svg);
+}
+
+.people-input-wrapper::before {
+  content: url(./images/icon-person.svg);
 }
 
 .calculator__outputs {
   background-color: var(--neutral-Very-dark-cyan);
   margin-inline: -0.5rem;
+  padding-block-start: 2rem;
+
+  @media (min-width: 50rem) {
+    margin-inline: 0;
+    margin-block: -0.5rem;
+  }
 }
 
 .calculator__reset {
   background-color: var(--primary-Strong-cyan);
   color: var(--neutral-Very-dark-cyan);
+  cursor: pointer;
+
+  @media (min-width: 50rem) {
+    margin-block-start: auto;
+  }
+}
+
+.tip__percentages {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--space-sm);
+
+  @media (min-width: 50rem) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .tip__percentage-btn {
@@ -255,14 +306,11 @@ header {
   color: var(--neutral-White);
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &.active {
     background-color: var(--primary-Strong-cyan);
     color: var(--neutral-Very-dark-cyan);
   }
-}
-
-inpur.tip__percentage-btn {
-  cursor: text;
 }
 
 .calculator__output-text {
@@ -275,4 +323,16 @@ inpur.tip__percentage-btn {
 
 .calculator__output-number {
   color: var(--primary-Strong-cyan);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
